<resources>
    <string name="app_name">Login and News Project</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="welcome_string">,, welcome to :</string>
    <string name="welcome_2_string">,, welcome :</string>
    <string name="login_string">Login Form ,,</string>
    <string name="user_name_hint_string">User Name</string>
    <string name="password_hint_string">Password</string>
    <string name="login_btn_string">log in</string>
    <string name="register_btn_string">register now</string>
    <string name="copyright_string">Copyright ♂♀</string>
    <string name="user_name_error">user name empty!</string>
    <string name="password_error">password empty!</string>
    <string name="login_error">invalid user name or password</string>
</resources>
