<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jihed.loginproject.activity.LoginActivity"
    android:background="@drawable/background_gray">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeView"
        android:text="@string/welcome_string"
        android:textColor="@color/white"
        android:textSize="@dimen/welcome_view_text_size"
        android:textStyle="italic"
        android:padding="@dimen/text_view_padding"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/welcomeView"
        android:layout_marginTop="@dimen/margin_top_login_form"
        android:weightSum="4">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/login_string"
            android:textColor="@color/white"
            android:textSize="@dimen/form_name_text_size"
            android:textStyle="italic"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:weightSum="4"
        android:gravity="center">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/usernameET"
                android:inputType="textPersonName"
                android:hint="@string/user_name_hint_string"
                android:drawableRight="@drawable/user_ic"
                android:background="@drawable/id_bg"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordET"
                android:inputType="textPassword"
                android:hint="@string/password_hint_string"
                android:drawableRight="@drawable/password_ic"
                android:background="@drawable/id_bg"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginBtn"
                android:text="@string/login_btn_string"
                android:textSize="@dimen/login_btn_text_size"
                android:textStyle="italic"
                android:textColor="@color/white"
                android:background="@drawable/login_btn_bg"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/registerBtn"
                android:text="@string/register_btn_string"
                android:textSize="@dimen/login_btn_text_size"
                android:textStyle="italic"
                android:textColor="@color/white"
                android:background="@drawable/login_btn_bg"
                />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright_string"
        android:textColor="@color/black"
        android:textSize="@dimen/copyright_text_size"
        android:textStyle="italic"
        android:background="@color/copy_right_bg"
        android:padding="@dimen/text_view_padding"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
